# src/swagger/swagger-output.json
@@ -12,6 +12,12 @@
     }
   ],
   "components": {
+    "securitySchemes": {
+      "basicAuth": {
+        "type": "http",
+        "scheme": "basic"
+      }
+    },
     "schemas": {
       "ChatRoom": {
         "type": "object",
